--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^7.9.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
+    "react-hook-form": "^6.3.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
