--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.4.2",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
@@ -15,6 +16,7 @@
     "expo": "^38.0.9",
     "expo-status-bar": "^1.0.2",
     "firebase": "^7.9.0",
+    "native-base": "^2.13.13",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-hook-form": "^6.4.0",
